[package]
name = "aspmatch"
version = "0.1.0"
authors = ["PicoJr <picojr_dev@gmx.com>"]
edition = "2021"
repository = "https://github.com/PicoJr/aspmatch"
description = "parse and write match files (image to image tie points)"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["parser", "match", "file", "stereo", "pipeline"]
include = ["src/**/*", "LICENSE", "README.md", "examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3"
clap = "~2.33"
rand = "0.8.0"

# https://github.com/rust-lang/rust/issues/88791
[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
